# cPMML

./: .gitignore  CMakeLists.txt  README.md
benchmark/: model_benchmark.cc
cmake/: CPM.cmake
examples/: scoring_example01.cc  scoring_example02.cc  scoring_example03.cc  scoring_example04.cc
include/: cPMML.h
src/: options.h
src/anomalydetectionmodel/: anomalydetectionevaluator.h
src/api/: exceptions.cc  model.cc  prediction.cc
src/associationmodel/: associationevaluator.h  associationmodel.h
src/baselinemodel/: baselineevaluator.h  baselinemodel.h
src/clusteringmodel/: clusteringevaluator.h  clusteringmodel.h
src/core/: builtinfunctions.h  closure.h  dagbuilder.h  datadictionary.h  datafield.h  datatype.h  derivedfield.h  fastpredicate.h  fieldusagetype.h  header.h  indexer.h  internal_evaluator.h  internal_model.h  internal_score.h  intervalbuilder.h  invalidvaluetreatmentmethod.h  miningfield.h  miningfunction.h  miningschema.h  missingvaluetreatmentmethod.h  modelbuilder.h  optype.h  outliertreatmentmethod.h  predicate.h  predicatebuilder.h  predicateoptype.h  predicatetype.h  property.h  sample.h  string_view.h  target.h  transformationdictionary.h  value.h  xmlnode.h
src/ensemblemodel/: ensembleevaluator.h  ensemblemodel.h  multiplemodelmethod.h  segment.h
src/expression/: apply.h  constant.h  discretize.h  expression.h  expressionbuilder.h  expressiontype.h  fieldref.h  mapvalues.h  normcontinuous.h  normdiscrete.h  textindex.h
src/gaussianprocessmodel/: gaussianprocessevaluator.h  gaussianprocessmodel.h
src/generalregressionmodel/: generalregressionevaluator.h  generalregressionmodel.h
src/knnmodel/: knnevaluator.h  knnmodel.h
src/math/: distance.h  misc.h  normalizationmethods.h
src/naivebayesmodel/: naivebayesevaluator.h  naivebayesmodel.h
src/neuralnetwork/: neuralactivation.h  neuralnetworkevaluator.h  neuralnetworkmodel.h
src/output/: associationoutput.h  entityid.h  outputdictionary.h  outputexpression.h  outputexpressionbuilder.h  outputexpressiontype.h  outputfield.h  predictedValue.h  probability.h  residual.h  transformedvalue.h
src/regressionmodel/: categoricalpredictor.h  normalizationmethodbuilder.h  normalizationmethodtype.h  numericpredictor.h  predictorterm.h  regressionevaluator.h  regressionmodel.h  regressionscore.h  regressiontable.h
src/rulesetmodel/: rulesetevaluator.h  rulesetmodel.h
src/scorecard/: scorecardevaluator.h  scorecardmodel.h
src/svmmodel/: svmevaluator.h  svmkernel.h  svmmodel.h
src/textmodel/: textmodel.h
src/timeseriesmodel/: timeseriesevaluator.h  timeseriesmodel.h
src/treemodel/: node.h  scoredistribution.h  treeevaluator.h  treemodel.h  treescore.h
src/treetable/: treetable.h  treetablenode.h
src/utils/: csvreader.h  utils.h
test/: CMakeLists.txt  generate_association_fixtures.py  generate_audit_binary_reg_fixture.py  generate_housing_gbt_fixtures.py  model_tester.cc  pmml_tester.cc  timeseries_tester.cc
test/data/dataset/: ARIMA_AR1.csv  ARIMA_DynReg.csv  ARIMA_Kalman.csv  ARIMA_SARIMA.csv  AssociationRules.csv  AssociationRulesExcl.csv  AssociationRulesRuleAssoc.csv  AuditBinaryReg.csv  AuditRandomForest.csv  AuditTree.csv  ETS_AddTrend.csv  ETS_SeasonalAddAdd.csv  GARCH_AR1_GARCH11.csv  GRM_Linear.csv  GRM_MultinomLogistic.csv  HousingGBTClassifier.csv  HousingGBTClassifier_PCA.csv  HousingGBTRegressor.csv  HousingGBTRegressor_PCA.csv  HousingLRClassifier.csv  HousingLRClassifier_PCA.csv  HousingLinearRegressor.csv  HousingLinearRegressor_PCA.csv  HousingRFClassifier.csv  HousingRFClassifier_PCA.csv  HousingRFRegressor.csv  HousingRFRegressor_PCA.csv  IrisAnomaly.csv  IrisBaseline.csv  IrisClustering.csv  IrisGP.csv  IrisKNN.csv  IrisLinearReg.csv  IrisMultinomReg.csv  IrisNN.csv  IrisNaiveBayes.csv  IrisRandomForest.csv  IrisRuleSet.csv  IrisSVM.csv  IrisScorecard.csv  (+10 more)
tools/: generate_fixture.py
